--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -18,7 +18,7 @@
 
 	{% endfor %}
 	</ul> -->
-	<div class="al-events-container">
+	<div class="all-events-container">
 		{% for empresa in empresas %}
 
 			<div class="event">
