--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -1,6 +1,6 @@
 
 {% if empresas|length > 0 %}
-	<!-- <ul>
+	<ul>
 	{% for empresa in empresas %}
 
 		<li>
@@ -17,8 +17,8 @@
 		</li>
 
 	{% endfor %}
-	</ul> -->
-	<div class="all-events-container">
+	</ul>
+	<!-- <div class="all-events-container">
 		{% for empresa in empresas %}
 
 			<div class="event">
@@ -42,7 +42,7 @@
 			</div>
 
 		{% endfor %}
-	</div>
+	</div> -->
 {% else %}
 
 	<div class="search-title-container" style="display: block; text-align: center; position: relative;">
