--- a/plugins/rainlab/pages/assets/css/style-comarcas.css
+++ b/plugins/rainlab/pages/assets/css/style-comarcas.css
@@ -520,6 +520,10 @@
       font-size: 16px;
       color: #9B9B9B;
       line-height: 33px; }
+  .all-events #all-empresas .event:nth-child(2), .all-events #all-empresas .event:nth-child(6), .all-events #all-empresas .event:nth-child(12), .all-events #all-empresas .event:nth-child(16), .all-events #all-empresas .event:nth-child(22), .all-events #all-empresas .event:nth-child(26), .all-events #all-empresas .event:nth-child(32), .all-events #all-empresas .event:nth-child(36), .all-events #all-empresas .event:nth-child(42), .all-events #all-empresas .event:nth-child(43) {
+    width: calc((100% / 3));
+    width: -webkit-calc((100% / 3));
+    width: -moz-calc((100% / 3)); }
   .all-events .all-events-container {
     width: 100%;
     height: auto;
