--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -18,6 +18,13 @@
 
 	{% endfor %}
 </ul> -->
+<div class="search-title-container">
+	{% if empresas|length > 1 %}
+	<p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empresas|length}} {{ 'eventos que se adaptan ti'|_ }}.</p>
+	{% else %}
+	 <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empresas|length}} {{ 'evento que se adaptan ti'|_ }}.</p>
+	{% endif %}
+</div>
 <div id="all-empresas" class="all-events-container">
 	{% for empresa in empresas %}
 
