--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -131,6 +131,10 @@
     }
   }
 
+  #st-empresas {
+    top: -140px;
+  }
+
   @media (max-width: 1160px) {
     #search-empresas {
       #exp-header {
