--- a/plugins/rainlab/pages/assets/css/style-comarcas.css
+++ b/plugins/rainlab/pages/assets/css/style-comarcas.css
@@ -104,6 +104,9 @@
 #listEmp #search-event {
   margin-bottom: 0px !important; }
 
+#st-empresas {
+  top: -140px; }
+
 @media (max-width: 1160px) {
   #search-empresas #exp-header .txt {
     line-height: 136px; }
