--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2621,6 +2621,9 @@ html, body {
   .all-exps .search-title-container, .all-events .search-title-container {
     top: -65px !important;
   }
+  #st-empresas {
+    top: -122px !important;
+  }
   .all-exps .search-title-container .title-search, .all-events .search-title-container .title-search {
     line-height: 20px !important;
   }
