--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -18,7 +18,7 @@
 
 	{% endfor %}
 </ul> -->
-<div class="search-title-container">
+<div id="st-empresas" class="search-title-container">
 	{% if empresas|length > 1 %}
 	<p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empresas|length}} {{ 'empresas que se adaptan ti'|_ }}.</p>
 	{% else %}
