--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3524,3 +3524,6 @@ footer {
 
 .header-search .header-txt .txt .first-word {
   line-height: 165px; }
+
+#all-empresas {
+  margin-bottom: 50px; }
