--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -44,7 +44,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}{{beach.viewBag.url}}">{{'Ver empresa'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" class="fr-fic fr-dii"></a></div>
+				<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}/empresa/{{empresa.slug}}">{{'Ver empresa'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" class="fr-fic fr-dii"></a></div>
 			</div>
 		</div>
 
