--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -22,7 +22,7 @@
 	{% if empresas|length > 1 %}
 	<p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empresas|length}} {{ 'empresas que se adaptan ti'|_ }}.</p>
 	{% else %}
-	 <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empresas|length}} {{ 'empresas que se adaptan ti'|_ }}.</p>
+	 <p class="title-search"> {{ 'Hemos encontrado'|_ }} {{empresas|length}} {{ 'empresa que se adapta ti'|_ }}.</p>
 	{% endif %}
 </div>
 <div id="all-empresas" class="all-events-container">
