--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -34,7 +34,7 @@
 			</div><img class="rec-img fr-fic fr-dii" src="{{empresa.image}}">
 			<div class="txt-container">
 
-				<p class="name">{{str_limit(empresa.name,18) | capitalize}}</p><img class="separator fr-fic fr-dii" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
+				<p class="name">{{empresa.name | capitalize}}</p><img class="separator fr-fic fr-dii" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
 				<div class="icons">
 					<div class="icon-pair">
 						<img src="{{preurl}}/storage/app/media/uploaded-files/templates/loc-events.svg" class="fr-fil fr-dib">
