--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -383,6 +383,8 @@
       font-size: 13px;
       line-height: 22px;
       text-decoration: none;
+      position: absolute;
+      top: 70px;
     }
     .link-exp {
       @include flexbox();
