--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2501,6 +2501,18 @@ html, body {
   .header-empresa {
     height: auto !important; } }
 
+@media (max-width: 910px) {
+  .header-empresa .event-features {
+    flex-direction: column;
+    height: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    position: relative; }
+    .header-empresa .event-features .feature-txt {
+      margin: 0px !important;
+      padding-top: 20px;
+      padding-bottom: 20px; } }
+
 @media (max-width: 920px) and (min-width: 710px) {
   .separator-lang, .dis-item {
     display: none !important; }
