--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2508,7 +2508,7 @@ html, body {
     padding-top: 30px;
     padding-bottom: 30px;
     position: relative; }
-    .header-empresa .event-features .feature-txt {
+    .header-empresa .event-features .feature-exp {
       margin: 0px !important;
       padding-top: 20px;
       padding-bottom: 20px; } }
