--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2975,7 +2975,7 @@ html, body {
     padding-top: 30px;
     padding-bottom: 30px;
     position: relative;
-    .feature-txt {
+    .feature-exp {
       margin: 0px !important;
       padding-top: 20px;
       padding-bottom: 20px;
