--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2980,6 +2980,9 @@ html, body {
       padding-top: 20px;
       padding-bottom: 20px;
     }
+    .feature-txt-empresa {
+      position: relative !important;
+    }
   }
 }
 
