--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2511,7 +2511,9 @@ html, body {
     .header-empresa .event-features .feature-exp {
       margin: 0px !important;
       padding-top: 20px;
-      padding-bottom: 20px; } }
+      padding-bottom: 20px; }
+    .header-empresa .event-features .feature-txt-empresa {
+      position: relative !important; } }
 
 @media (max-width: 920px) and (min-width: 710px) {
   .separator-lang, .dis-item {
