--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2982,6 +2982,7 @@ html, body {
     }
     .feature-txt-empresa {
       position: relative !important;
+      top: 0px !important;
     }
   }
 }
