--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2645,6 +2645,8 @@ html, body {
     width: 85%; } }
 
 @media (max-width: 709px) {
+  .bussinesPage.llls section.desc {
+    margin-top: 50px !important; }
   .municipios-snippet {
     flex-direction: column;
     align-items: center !important; }
