--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3169,6 +3169,10 @@ html, body {
 
 @media (max-width: 709px) {
 
+  .bussinesPage.llls section.desc {
+    margin-top: 50px !important;
+  }
+
   .municipios-snippet {
     flex-direction: column;
     align-items: center !important;
