--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2985,6 +2985,9 @@ html, body {
       top: 0px !important;
     }
   }
+  .bussinesPage.llls section {
+    max-width: 80% !important;
+  }
 }
 
 
