--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2987,6 +2987,7 @@ html, body {
   }
   .bussinesPage.llls section.desc {
     max-width: 80% !important;
+    margin-top: 70px !important;
   }
 }
 
