--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2985,7 +2985,7 @@ html, body {
       top: 0px !important;
     }
   }
-  .bussinesPage.llls section.desc {
+  .bussinesPage section.desc {
     max-width: 80% !important;
     margin-top: 70px !important;
   }
