--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2965,6 +2965,7 @@ html, body {
 @media (max-width: 970px) {
   .header-empresa {
     height: auto !important;
+    min-height: 800px !important;
   }
 }
 
