--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2820,6 +2820,7 @@ html, body {
   .more-popular .title-container .title, .all-events .title-container .title, .all-exps .title-container .title, .main-section-comarcas .title-container .title {
     font-size: 35px !important;
     line-height: 35px !important;
+    text-align: left !important;
   }
   .more-popular .event, .all-events .event, .all-exps .event, .main-section-comarcas .event {
     width: 100% !important;
