--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2391,7 +2391,8 @@ html, body {
     left: 0px !important; }
   .more-popular .title-container .title, .all-events .title-container .title, .all-exps .title-container .title, .main-section-comarcas .title-container .title {
     font-size: 35px !important;
-    line-height: 35px !important; }
+    line-height: 35px !important;
+    text-align: left !important; }
   .more-popular .event, .all-events .event, .all-exps .event, .main-section-comarcas .event {
     width: 100% !important;
     margin: 0 auto !important; }
