--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2814,7 +2814,7 @@ html, body {
     position: relative !important;
     width: 90% !important;
     margin: 0px auto 30px auto !important;
-    text-align: center;
+    //text-align: center;
     left: 0px !important;
   }
   .more-popular .title-container .title, .all-events .title-container .title, .all-exps .title-container .title, .main-section-comarcas .title-container .title {
