--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3607,6 +3607,9 @@ html, body {
       padding-top: 0px;
     }
   }
+  #out-features.ruta-features {
+    top: 668px !important;
+  }
 }
 
 @media (max-width: 1200px) and (min-width: 726px) {
