--- a/themes/default/partials/site/headerruta.htm
+++ b/themes/default/partials/site/headerruta.htm
@@ -19,7 +19,7 @@
 
 
 <!-- FEATURES -->
-<div id="out-features" class="event-features">
+<div id="out-features" class="event-features ruta-features">
   <div class="feature"><img src="{{preurl}}/storage/app/media/uploaded-files/templates/calendar-event.svg" class="fr-fil fr-dib">
     {% if ruta[0].days > 1 %}
       <p class="feature-txt">{{ruta[0].days}} días</p>
