--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -2948,7 +2948,9 @@ html, body {
     min-height: 360px;
     justify-content: flex-start !important; }
     #out-features .feature {
-      padding-top: 0px; } }
+      padding-top: 0px; }
+  #out-features.ruta-features {
+    top: 668px !important; } }
 
 @media (max-width: 1200px) and (min-width: 726px) {
   .border {
