--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3591,6 +3591,7 @@ html, body {
     position: absolute !important;
     min-height: 360px;
     justify-content: flex-start !important;
+    top: 700px !important;
     .feature {
       padding-top: 0px;
     }
