--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3608,7 +3608,7 @@ html, body {
       padding-top: 0px;
     }
   }
-  #out-features.ruta-features {
+  #out-features.ruta-features, #out-features.experiencia-features {
     top: 668px !important;
   }
 }
