--- a/themes/default/partials/site/headerexp.htm
+++ b/themes/default/partials/site/headerexp.htm
@@ -26,16 +26,16 @@
   </div>
 </div>
 
-<div id="out-features" class="event-features">
+<div id="out-features" class="event-features experiencia-features">
   <div class="feature-exp">
-    
+
     <img src="{{preurl}}/storage/app/media/uploaded-files/templates/calendar-exp.svg">
     {%if experience[0].days < 2%}
     <p class="feature-txt">{{experience[0].days}} día</p>
     {% else %}
      <p class="feature-txt">{{experience[0].days}} días</p>
     {%endif%}
-  
+
   </div>
   {% set cat = experience[0].interest|split(' y ')%}
   <div class="feature-exp">
