--- a/themes/default/partials/site/searchempresa.htm
+++ b/themes/default/partials/site/searchempresa.htm
@@ -30,6 +30,10 @@
             <form data-request="onFindEmpresa">
               <div class="inputs-container">
                 <div id="empresa-category" class="days-container">
+                  <input type="text" name="search" placeholder="¿Qué estás buscando?" value="">
+                  <span class="select-title">{{ 'NOMBRE DE EMPRESA'|_ }}</span>
+                </div>
+                <div id="empresa-category" class="days-container">
                   <select id="sltType" class="custom-select select-days" name="type">
                     {% for key,value in types %}
                         <option value="{{str_slug(value)}}">{{ value |_ }}</option>
@@ -38,9 +42,9 @@
                   </select>
                   <span class="select-title">{{ 'TIPO DE EMPRESA'|_ }}</span>
                 </div>
-               
+
                 <div id="empresa-location" class="type-container">
-                  <select id="sltLocation" class="custom-select select-type" name="location">
+                  <select id="sltLocation" class="custom-select select-type" name="location" multiple="multiple">
                     {% for key,value in municipalities %}
                         <option value="{{str_slug(value)}}">{{value}}</option>
                     {% endfor %}
@@ -55,6 +59,6 @@
             </form>
           </div>
         </div>
-       
+
       </div>
     </div>
