--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4191,7 +4191,9 @@ footer {
       #empresa-category {
         width: 340px;
       }
-
+      #empresa-search {
+        width: 232px;
+      }
     }
   }
 }
