--- a/themes/default/partials/site/searchempresa.htm
+++ b/themes/default/partials/site/searchempresa.htm
@@ -29,7 +29,7 @@
           <div class="search-bar">
             <form data-request="onFindEmpresa">
               <div class="inputs-container">
-                <div id="empresa-category" class="days-container">
+                <div id="empresa-search" class="days-container">
                   <input type="text" name="search" placeholder="¿Qué estás buscando?" value="">
                   <span class="select-title">{{ 'NOMBRE DE EMPRESA'|_ }}</span>
                 </div>
