--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4193,6 +4193,16 @@ footer {
       }
       #empresa-search {
         width: 232px;
+        input {
+          width: 100%;
+          height: 100%;
+          background-color: transparent;
+          border: none;
+          padding-left: 55px;
+          color: #4A4A4A;
+          font-size: 15.72px;
+          line-height: 22px;
+        }
       }
     }
   }
