--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4202,6 +4202,7 @@ footer {
           color: #4A4A4A;
           font-size: 15.72px;
           line-height: 22px;
+          margin-top: -3px;
           &:focus {
             outline: none;
           }
