--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3398,7 +3398,8 @@ footer {
         padding-left: 55px;
         color: #4A4A4A;
         font-size: 15.72px;
-        line-height: 22px; }
+        line-height: 22px;
+        margin-top: -3px; }
         .bussinesPage #search-event .search-bar #empresa-search input:focus {
           outline: none; }
 
