--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4208,6 +4208,9 @@ footer {
           }
         }
       }
+      .empresa-search {
+        background-image: url('../svg/minilupa.svg') !important;
+      }
     }
   }
 }
