--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4208,7 +4208,7 @@ footer {
           }
         }
         input::-webkit-input-placeholder {
-          opacity: 1;
+          opacity: 1 !important;
       }
       }
       .empresa-search {
