--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3402,7 +3402,16 @@ footer {
         margin-top: -3px; }
         .bussinesPage #search-event .search-bar #empresa-search input:focus {
           outline: none; }
-      .bussinesPage #search-event .search-bar #empresa-search input::-webkit-input-placeholder {
+      .bussinesPage #search-event .search-bar #empresa-search ::-webkit-input-placeholder {
+        opacity: 1 !important;
+        /* for older chrome versions. may no longer apply. */ }
+      .bussinesPage #search-event .search-bar #empresa-search :-moz-placeholder {
+        /* Firefox 18- */
+        opacity: 1 !important; }
+      .bussinesPage #search-event .search-bar #empresa-search ::-moz-placeholder {
+        /* Firefox 19+ */
+        opacity: 1 !important; }
+      .bussinesPage #search-event .search-bar #empresa-search :-ms-input-placeholder {
         opacity: 1 !important; }
     .bussinesPage #search-event .search-bar .empresa-search {
       background-image: url("../svg/minilupa.svg") !important; }
