--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4208,18 +4208,22 @@ footer {
           }
         }
         ::-webkit-input-placeholder {
+            color: #4A4A4A;
             opacity: 1 !important; /* for older chrome versions. may no longer apply. */
           }
 
           :-moz-placeholder { /* Firefox 18- */
+              color: #4A4A4A;
               opacity: 1 !important;
           }
 
           ::-moz-placeholder {  /* Firefox 19+ */
+              color: #4A4A4A;
               opacity: 1 !important;
           }
 
           :-ms-input-placeholder {
+            color: #4A4A4A;
              opacity: 1 !important;
           }
       }
