--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3582,3 +3582,8 @@ footer {
 
 #all-empresas {
   margin-bottom: 50px; }
+
+@media (min-width: 710px) and (max-width: 1100px) {
+  .businessPage #search-event {
+    width: 90% !important;
+    height: 177px !important; } }
