--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4436,3 +4436,10 @@ footer {
 #all-empresas {
   margin-bottom: 50px;
 }
+
+@media (min-width: 710px) and (max-width: 1100px) {
+  .businessPage #search-event {
+    width: 90% !important;
+    height: 177px !important;
+  }
+}
