--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4438,7 +4438,7 @@ footer {
 }
 
 @media (min-width: 710px) and (max-width: 1100px) {
-  .businessPage > #search-event {
+  .bussinesPage > #search-event {
     width: 90% !important;
     height: 177px !important;
   }
