--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4438,8 +4438,10 @@ footer {
 }
 
 @media (min-width: 710px) and (max-width: 1100px) {
-  .bussinesPage > #search-event {
-    width: 90% !important;
-    height: 177px !important;
+  .bussinesPage {
+    #search-event {
+      width: 90% !important;
+      height: 177px !important;
+    }
   }
 }
