--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3587,7 +3587,7 @@ footer {
   .bussinesPage #search-event {
     width: 90% !important;
     height: 177px !important; }
-    .bussinesPage #search-event .search-bar-container {
+    .bussinesPage #search-event .search-bar {
       width: 95% !important;
       height: 140px !important;
       margin: 0 auto !important; } }
