--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4442,7 +4442,7 @@ footer {
     #search-event {
       width: 90% !important;
       height: 177px !important;
-      .search-bar-container {
+      .search-bar {
         width: 95% !important;
         height: 140px !important;
         margin: 0 auto !important;
