--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4446,6 +4446,12 @@ footer {
         width: 95% !important;
         height: 140px !important;
         margin: 0 auto !important;
+        .button-container {
+          width: 100% !important;
+          height: 50% !important;
+          border-top-right-radius: 0px !important;
+          border-bottom-left-radius: 4px;
+        }
       }
     }
   }
