--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3590,4 +3590,9 @@ footer {
     .bussinesPage #search-event .search-bar {
       width: 95% !important;
       height: 140px !important;
-      margin: 0 auto !important; } }
+      margin: 0 auto !important; }
+      .bussinesPage #search-event .search-bar .button-container {
+        width: 100% !important;
+        height: 50% !important;
+        border-top-right-radius: 0px !important;
+        border-bottom-left-radius: 4px; } }
