--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3591,6 +3591,8 @@ footer {
       width: 95% !important;
       height: 140px !important;
       margin: 0 auto !important; }
+      .bussinesPage #search-event .search-bar form {
+        flex-direction: column !important; }
       .bussinesPage #search-event .search-bar .button-container {
         width: 100% !important;
         height: 50% !important;
