--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3593,6 +3593,10 @@ footer {
       margin: 0 auto !important; }
       .bussinesPage #search-event .search-bar form {
         flex-direction: column !important; }
+      .bussinesPage #search-event .search-bar .inputs-container {
+        width: 100%;
+        height: 50% !important;
+        flex-wrap: wrap; }
       .bussinesPage #search-event .search-bar .button-container {
         width: 100% !important;
         height: 50% !important;
