--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3597,6 +3597,10 @@ footer {
         width: 100%;
         height: 50% !important;
         flex-wrap: wrap; }
+        .bussinesPage #search-event .search-bar .inputs-container #empresa-category, .bussinesPage #search-event .search-bar .inputs-container #empresa-location {
+          width: 35% !important; }
+        .bussinesPage #search-event .search-bar .inputs-container #empresa-search {
+          width: 30% !important; }
       .bussinesPage #search-event .search-bar .button-container {
         width: 100% !important;
         height: 50% !important;
