--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4453,7 +4453,10 @@ footer {
           width: 100%;
           height: 50% !important;
           flex-wrap: wrap;
-          #empresa-category, #empresa-location {
+          #empresa-category {
+            width: 34.5% !important;
+          }
+          #empresa-location {
             width: 35% !important;
           }
           #empresa-search {
