--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4452,7 +4452,7 @@ footer {
         .inputs-container {
           width: 100%;
           height: 50% !important;
-          flex-wrap: wrap;
+          flex-wrap: nowrap;
           #empresa-category {
             width: 34.5% !important;
           }
