--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3434,7 +3434,8 @@ footer {
     text-align: center;
     margin: 0px auto 58px auto; }
   .emp .empresas-container ul > li {
-    padding-left: 90px; }
+    max-width: 337px;
+    margin: 0 auto; }
     .emp .empresas-container ul > li a {
       font-family: AvenirNext-Medium;
       font-size: 16px;
