--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3024,7 +3024,10 @@ html, body {
     flex-direction: column !important; }
     .emp .empresas-container {
       width: 100% !important;
-      margin-bottom: 60px; }
+      margin-bottom: 60px;
+      border-bottom: 1px solid #CECECE;
+      padding-bottom: 50px;
+      border-right: none !important; }
       .emp .empresas-container ul > li {
         padding-left: 40px !important; } }
 
