--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3718,6 +3718,9 @@ html, body {
     .empresas-container {
       width: 100% !important;
       margin-bottom: 60px;
+      border-bottom: 1px solid #CECECE;
+      padding-bottom: 50px;
+      border-right: none !important;
       ul > li {
         padding-left: 40px !important;
       }
