--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2325,3 +2325,9 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 .btn-text a:hover {
   color: #175DA3 !important;
 }
+
+.float-right-photos {
+  width: 20%;
+  height: 100%;
+  background-color: #F6F6F6;
+}
