--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5633,9 +5633,10 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 .float-right-photos {
   width: 20%;
   height: 100%;
+  display: inline-block;
   float: right;
   background-color: #F6F6F6; }
 
-.floatJuan .layout-row div {
+.floatJuan .layout-row #Form-outsideContainer, .floatJuan .layout-row #Form-primaryContainer {
   width: 80%;
   display: inline-block !important; }
