--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2344,3 +2344,6 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     }
   }
 }
+.layout {
+  margin-bottom: 0px;
+}
