--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2342,6 +2342,8 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     border: none !important;
     background-color: #f6f6f6 !important;
     color: #818181 !important;
+    border-radius: 0px !important;
+    box-shadow: none !important;
   }
   .layout-row {
     #Form-outsideContainer, #Form-primaryContainer {
