--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5631,7 +5631,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   color: #175DA3 !important; }
 
 .float-right-photos {
-  width: 20%;
+  width: 300px;
   height: 100%;
   position: absolute;
   top: 0px;
