--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2327,7 +2327,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 }
 
 .float-right-photos {
-  width: 20%;
+  width: 300px;
   height: 100%;
   position: absolute;
   top: 0px;
