--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2347,9 +2347,12 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   }
   .layout-row {
     #Form-outsideContainer, #Form-primaryContainer {
-      width: 76%;
+      width: 70%;
       display: inline-block !important;
     }
+  }
+  #custom-float .form-tabless-fields .select2-selection__rendered {
+    color: #818181 !important;
   }
 }
 .layout {
