--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2351,7 +2351,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
       display: inline-block !important;
     }
   }
-  #custom-float .form-tabless-fields .select2-selection__rendered {
+#select2-Form-field-Empresa-type_id-container {
     color: #818181 !important;
   }
 }
