--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5651,7 +5651,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   width: 70%;
   display: inline-block !important; }
 
-.floatJuan #custom-float .form-tabless-fields .select2-selection__rendered {
+.floatJuan #select2-Form-field-Empresa-type_id-container {
   color: #818181 !important; }
 
 .layout {
