--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2351,8 +2351,9 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
       display: inline-block !important;
     }
   }
-#select2-Form-field-Empresa-type_id-container {
+#select2-Form-field-Empresa-type_id-container, #select2-Form-field-Empresa-municipality-container {
     color: #818181 !important;
+    padding-top: 6px !important;
   }
 }
 .layout {
