--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5651,8 +5651,9 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   width: 70%;
   display: inline-block !important; }
 
-.floatJuan #select2-Form-field-Empresa-type_id-container {
-  color: #818181 !important; }
+.floatJuan #select2-Form-field-Empresa-type_id-container, .floatJuan #select2-Form-field-Empresa-municipality-container {
+  color: #818181 !important;
+  padding-top: 6px !important; }
 
 .layout {
   margin-bottom: 0px; }
