--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5646,6 +5646,12 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   z-index: 100;
   top: 54px; }
 
+.floatJuan .field-textarea.size-large {
+  border: none !important;
+  background-color: #F6F6F6 !important;
+  color: #818181 !important;
+  border-radius: 0px !important; }
+
 .floatJuan .select2-container--default .select2-selection--single {
   height: 50px !important;
   border: none !important;
