--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2344,6 +2344,12 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     z-index: 100;
     top: 54px;
   }
+  .field-textarea.size-large {
+    border: none !important;
+    background-color: #F6F6F6 !important;
+    color: #818181 !important;
+    border-radius: 0px !important;
+  }
   .select2-container--default .select2-selection--single {
     height: 50px !important;
     border: none !important;
