--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2349,6 +2349,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
     background-color: #F6F6F6 !important;
     color: #818181 !important;
     border-radius: 0px !important;
+    padding: 20px 30px !important;
   }
   .select2-container--default .select2-selection--single {
     height: 50px !important;
