--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5651,7 +5651,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   background-color: #F6F6F6 !important;
   color: #818181 !important;
   border-radius: 0px !important;
-  padding: 20px 30px !important; }
+  padding: 20px 30px 20px 15px !important; }
 
 .floatJuan .select2-container--default .select2-selection--single {
   height: 50px !important;
