--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2365,7 +2365,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
       display: inline-block !important;
     }
   }
-#select2-Form-field-Empresa-type_id-container, #select2-Form-field-Empresa-municipality-container {
+#select2-Form-field-Empresa-type_id-container, #select2-Form-field-Empresa-municipality-container, #select2-Form-field-Tipo-category-container {
     color: #818181 !important;
     padding-top: 6px !important;
   }
