--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -2337,7 +2337,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 }
 
 .floatJuan {
-  #Form-field-Empresa-avatar-group {
+  #Form-field-Empresa-avatar-group, #Form-field-Tipo-avatar-group {
     position: absolute;
     right: 20px;
     width: 260px;
