--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5639,7 +5639,7 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
   float: right;
   background-color: #F6F6F6; }
 
-.floatJuan #Form-field-Empresa-avatar-group {
+.floatJuan #Form-field-Empresa-avatar-group, .floatJuan #Form-field-Tipo-avatar-group {
   position: absolute;
   right: 20px;
   width: 260px;
