--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5671,3 +5671,10 @@ div[data-control="media-manager"] .media-list.tiles li.selected .icon-container 
 
 .layout {
   margin-bottom: 0px; }
+
+.modal-content textarea {
+  border: none !important;
+  background-color: #F6F6F6 !important;
+  color: #818181 !important;
+  border-radius: 0px !important;
+  padding: 20px 30px 20px 15px !important; }
